Login JWT Token Refresh Token logic added

--- a/src/Infrastructure/CareerCompassAPI.Persistence/CareerCompassAPI.Persistence.csproj
+++ b/src/Infrastructure/CareerCompassAPI.Persistence/CareerCompassAPI.Persistence.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Core\CareerCompassAPI.Application\CareerCompassAPI.Application.csproj" />
+    <ProjectReference Include="..\CareerCompassAPI.Infrastructure\CareerCompassAPI.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
