--- a/src/Core/CareerCompassAPI.Application/CareerCompassAPI.Application.csproj
+++ b/src/Core/CareerCompassAPI.Application/CareerCompassAPI.Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Abstraction\Repositories\ICompanyRepositories\" />
     <Folder Include="Abstraction\Storage\" />
     <Folder Include="Validators\" />
   </ItemGroup>
