--- a/src/Infrastructure/CareerCompassAPI.Infrastructure/CareerCompassAPI.Infrastructure.csproj
+++ b/src/Infrastructure/CareerCompassAPI.Infrastructure/CareerCompassAPI.Infrastructure.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.17.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.20" />
     <PackageReference Include="NETCore.MailKit" Version="2.1.0" />
   </ItemGroup>
