--- a/src/Infrastructure/CareerCompassAPI.SignalR/CareerCompassAPI.SignalR.csproj
+++ b/src/Infrastructure/CareerCompassAPI.SignalR/CareerCompassAPI.SignalR.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Connections" Version="1.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.1.0" />
   </ItemGroup>
 
