--- a/src/Infrastructure/CareerCompassAPI.Persistence/CareerCompassAPI.Persistence.csproj
+++ b/src/Infrastructure/CareerCompassAPI.Persistence/CareerCompassAPI.Persistence.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="Bogus" Version="34.0.2" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="Hangfire" Version="1.8.5" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
